--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a098e3c9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7c4b52a6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8dd4af55.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b2efc418.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5936bdd4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.e4169b0d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.12624255.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d0eef322.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.934fb75f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.43ea2016.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.95b15931.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.c7d5d64f.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_2doswo = {
+					__sveltekit_ac3zao = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a098e3c9.js"),
-						import("./_app/immutable/entry/app.5936bdd4.js")
+						import("./_app/immutable/entry/start.7c4b52a6.js"),
+						import("./_app/immutable/entry/app.12624255.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_2doswo.element, {
+						kit.start(app, __sveltekit_ac3zao.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
