--- a/donate/once.html
+++ b/donate/once.html
@@ -8,15 +8,15 @@
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7c4b52a6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.b177587c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b2efc418.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1b2c0e0e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.12624255.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d0eef322.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.2fcb44b9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.cefe0698.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.43ea2016.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.0006b40b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1538b71b.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.daa581e8.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.d8f5e4fb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.c7d5d64f.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_ac3zao = {
+					__sveltekit_1kv2f9b = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -62,10 +62,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7c4b52a6.js"),
-						import("../_app/immutable/entry/app.12624255.js")
+						import("../_app/immutable/entry/start.b177587c.js"),
+						import("../_app/immutable/entry/app.2fcb44b9.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ac3zao.element, {
+						kit.start(app, __sveltekit_1kv2f9b.element, {
 							node_ids: [0, 2, 8],
 							data,
 							form: null,
